# reson

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml  docsify.yml
docs/: README.md  _coverpage.md  _sidebar.md  ast-based-analysis.md  docusaurus.config.ts  example.md  index.html  package-lock.json  package.json  quickstart.md
docs/.nexdoc/: manifest.json
docs/apps/docs/: content-collections.ts  nexdoc.config.ts  next.config.js  package.json
docs/apps/docs/app/: layout.tsx  manifest.ts
docs/blog/: 2025-05-28-ast-based-analysis.mdx  authors.yml  tags.yml
docs/docs/: examples.mdx  introduction.mdx  quick-start.mdx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
src/: cli.rs  detector.rs  lib.rs  main.rs  utils.rs
src/models/: code_types.rs  detection_types.rs  mod.rs
src/parser/: ast_collection.rs  ast_node.rs  ast_parser.rs  mod.rs  tree_sitter.rs
src/utils/: ast_collection.rs  files.rs  filters.rs  language_mapping.rs  mod.rs  output.rs
tests/: main_binary.rs
tests/c/: testA.c  testB.c
tests/cpp/: testA.cpp  testB.cpp
tests/golang/: testA.go  testB.go  testC.go
tests/java/: TestA.java  TestB.java  TestC.java
tests/javascript/: TestA.jsx  TestB.jsx  TestC.jsx  testA.js  testB.js  testC.js
tests/python/: testA.py  testB.py  testC.py
tests/rust/: testA.rs  testB.rs  testC.rs
tests/typescript/: TestA.tsx  TestB.tsx  TestC.tsx  testA.ts  testB.ts  testC.ts
tests/unknown/nested/: testA.txt  testC.rs  testE.js  testF.c  testG.cpp  testH.cpp
(+15 files in other folders)
