[package]
name = "resoync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
tree-sitter = "0.20"
tree-sitter-c = "0.20"
tree-sitter-java = "0.20"
tree-sitter-python = "0.20"
clap = { version = "4.5.23", features = ["derive"] }
sha2 = "0.10.8"
log = "0.4.22"
env_logger = "0.11.5"
