[package]
name = "reson"
version = "1.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
tree-sitter = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.20"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
tempfile = "3.15.0"
walkdir = "2.5.0"
indicatif = "0.17.9"
blake3 = "1.5.5"
rayon = "1.10.0"
quick-xml = { version = "0.37.2", features = ["serialize"] }
